--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pipe_watcher"
-version = "2.1.0"
+version = "2.1.1"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 authors = ["Griffin O'Neill <gsoneill1003@gmail.com>"]
@@ -28,5 +28,5 @@ required-features = ["getch"]
 default = ["getch"]
 
 [dependencies]
-ipipe = { version = "0.7.4", default-features = false }
+ipipe = { version = "*", default-features = false }
 getch = { version = "0.2.1", optional = true }
